--- a/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
+++ b/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
@@ -831,10 +831,10 @@
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="id">
+        <ng-container matColumnDef="excelid">
           <th mat-header-cell *matHeaderCellDef class="table__cell">ID</th>
           <td mat-cell *matCellDef="let element" class="table__cell">
-            {{ element.id ? element.id : "---" }}
+            {{ element.excelid ? element.excelid : "---" }}
           </td>
         </ng-container>
 
