:construction: working on dates

--- a/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
+++ b/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
@@ -61,14 +61,18 @@
         </ng-container>
 
         <ng-container matColumnDef="woChild">
-          <th mat-header-cell *matHeaderCellDef class="table__cell">WO CHILD</th>
+          <th mat-header-cell *matHeaderCellDef class="table__cell">
+            WO CHILD
+          </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{ element.woChild ? element.woChild : "---" }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="ioChild">
-          <th mat-header-cell *matHeaderCellDef class="table__cell">IO CHILD</th>
+          <th mat-header-cell *matHeaderCellDef class="table__cell">
+            IO CHILD
+          </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{ element.ioChild ? element.ioChild : "---" }}
           </td>
@@ -93,7 +97,9 @@
         </ng-container>
 
         <ng-container matColumnDef="otMadre">
-          <th mat-header-cell *matHeaderCellDef class="table__cell">OT MADRE</th>
+          <th mat-header-cell *matHeaderCellDef class="table__cell">
+            OT MADRE
+          </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{ element.otMadre ? element.otMadre : "---" }}
           </td>
@@ -211,7 +217,7 @@
 
         <ng-container matColumnDef="fechaUltimoEnvioDocumentoADM">
           <th mat-header-cell *matHeaderCellDef class="table__cell">
-          FECHA ULTIMO ENVIO DOCUMENTO ADM
+            FECHA ULTIMO ENVIO DOCUMENTO ADM
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{
@@ -559,7 +565,7 @@
 
         <ng-container matColumnDef="rentabilidadServiciosPercent">
           <th mat-header-cell *matHeaderCellDef class="table__cell">
-         RENTABILIDAD SERVICIOS %
+            RENTABILIDAD SERVICIOS %
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{
