--- a/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
+++ b/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
@@ -31,7 +31,6 @@
   <mat-divider></mat-divider>
 
   <div class="body-container">
-    <!--*ngIf="budgetsDailyEntriesDataSource.data.length;  else default" -->
     <div style="overflow: auto">
       <table
         mat-table
@@ -997,7 +996,11 @@
                   <mat-icon>edit</mat-icon>
                   Editar
                 </button>
-                <button class="w3-small" mat-menu-item (click)="deleteDialog()">
+                <button
+                  class="w3-small"
+                  mat-menu-item
+                  (click)="deleteDialog(i)"
+                >
                   <mat-icon>delete</mat-icon>
                   Borrar
                 </button>
@@ -1028,178 +1031,7 @@
     >
     </mat-paginator>
   </div>
-  <!-- 
-  <ng-container matColumnDef="otMain">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">MAIN</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.otMain ? element.otMain : "---" }}
-    </td>
-  </ng-container>
 
-  <ng-container matColumnDef="otChild">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">CHILD</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.otChild ? element.otChild : "---" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">Posición</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.position ? element.position : "---" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="partNumber">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">NP</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.partNumber ? element.partNumber : "---" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">Descripción</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.description ? element.description : "---" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="quantity">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">Cantidad</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.quantity ? element.quantity : "---" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="internalStatus">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">Estado</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      <button
-        mat-button
-        [ngClass]="{
-          'btn-state-registered': element.internalStatus === 'registered',
-          'btn-state-progress': element.internalStatus === 'processed',
-          'btn-state-consultation': element.internalStatus === 'consultation',
-          'btn-state-finalizado': element.internalStatus === 'finalized'
-        }"
-      >
-        <span *ngIf="element.internalStatus === 'registered'">Registrado</span>
-        <span *ngIf="element.internalStatus === 'processed'">Proceso</span>
-        <span *ngIf="element.internalStatus === 'consultation'">Consulta</span>
-        <span *ngIf="element.internalStatus === 'finalized'">Finalizado</span>
-      </button>
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="status">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">Atención</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.status ? element.status : "---" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="createdBy">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">Usuario</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.createdBy ? element.createdBy : "---" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="wof">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">WOF</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.wof ? element.wof : "---" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="task">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">Tarea</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.task ? element.task : "---" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="observations">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">Observaciones</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.observations ? element.observations : "---" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="workshop">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">Taller</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.workshop ? element.workshop : "---" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="createdAt">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">
-      Fecha de solicitud
-    </th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      <span *ngIf="element.createdAt; else defaultcreatedAt">{{
-        element.createdAt | date: "dd/MM/yy hh:mm:ss"
-      }}</span>
-      <ng-template #defaultProcessAt>---</ng-template>
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="result">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">Resultado</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.result ? element.result : "---" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="kindOfTest">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">Ensayo</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.kindOfTest ? element.kindOfTest : "---" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="comments">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">Comentarios</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.comments ? element.comments : "---" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="finalizedBy">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">Inspector</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      {{ element.finalizedBy ? element.finalizedBy : "---" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="processAt">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">Fecha Proceso</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      <span *ngIf="element.processAt; else defaultProcessAt">{{
-        element.processAt | date: "dd/MM/yy hh:mm:ss"
-      }}</span>
-      <ng-template #defaultProcessAt>---</ng-template>
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="finalizedAt">
-    <th mat-header-cell *matHeaderCellDef class="table__cell">Fecha Cierre</th>
-    <td mat-cell *matCellDef="let element" class="table__cell">
-      <span *ngIf="element.finalizedAt; else defaultfinalizedAt">{{
-        element.finalizedAt | date: "dd/MM/yy hh:mm:ss"
-      }}</span>
-      <ng-template #defaultfinalizedAt>---</ng-template>
-    </td>
-  </ng-container> -->
-
-  <!-- <ng-template #default>
-        <div class="default">
-          <span>
-            <mat-icon style="vertical-align: middle;">upload</mat-icon> Adjunte archivo
-          </span>
-        </div>
-      </ng-template> -->
   <div class="footer">
     <button
       type="file"
@@ -1207,8 +1039,9 @@
       mat-button
       class="footer__btn-close"
       mat-dialog-close
+      [disabled]="!budgetsDailyEntriesDataSource.data.length"
     >
-      CANCELAR
+      Cerrar
     </button>
     <button
       type="file"
@@ -1218,7 +1051,7 @@
       (click)="saveDataTable()"
       [disabled]="!budgetsDailyEntriesDataSource.data.length"
     >
-      GUARDAR
+      Enviar
     </button>
   </div>
 </div>
