--- a/src/app/main/pages/spares/improvements/improvements.component.html
+++ b/src/app/main/pages/spares/improvements/improvements.component.html
@@ -4,6 +4,7 @@
     <h1 class="ms-toolbar__title" [ngClass]="isMobile ? 'ms-toolbar__title--mobile' : 'ms-toolbar__title--desktop'">
       Mejoras</h1>
     <button mat-stroked-button class="ms-toolbar__button" (click)="openDialog('create')"
+      *ngIf="authService.uiConfig.spareParts.improvements.toolbar.create"
       [ngClass]="isMobile ? 'ms-toolbar__button--mobile' : 'ms-toolbar__button--desktop'">
       <mat-icon>add</mat-icon>
       CREAR
@@ -73,21 +74,24 @@
         <td mat-cell *matCellDef="let element; let i = index">
           <ng-container>
             <mat-menu #rawMenu="matMenu">
-              <button class="w3-small" mat-menu-item *ngIf="element.state==='validated' || element.state==='registered'"
+              <button class="w3-small" mat-menu-item
+                *ngIf="(element.state==='validated' || element.state==='registered') && authService.uiConfig.spareParts.improvements.actions.validate"
                 (click)="openDialog('validate', element, i)">
                 <mat-icon>check_circle</mat-icon>
                 Validar
               </button>
-              <button class="w3-small" mat-menu-item *ngIf="element.state==='replacement'"
+              <button class="w3-small" mat-menu-item
+                *ngIf="element.state==='replacement' && authService.uiConfig.spareParts.improvements.actions.replace"
                 (click)="openDialog('replacement', element, i)">
                 <mat-icon>published_with_changes</mat-icon>
                 Reemplazo
               </button>
-              <button class="w3-small" mat-menu-item (click)="openDialog('edit', element, i)">
+              <button class="w3-small" mat-menu-item (click)="openDialog('edit', element, i)"
+                *ngIf="authService.uiConfig.spareParts.improvements.actions.edit">
                 <mat-icon>edit</mat-icon>
                 Editar
               </button>
-              <button *ngIf="element.state==='registered'" class="w3-small" mat-menu-item
+              <button *ngIf="element.state==='registered' && authService.uiConfig.spareParts.improvements.actions.delete" class="w3-small" mat-menu-item
                 (click)="openDialog('delete',element,i)">
                 <mat-icon>delete</mat-icon>
                 Borrar
