--- a/src/app/main/pages/spares/replacements/replacements.component.html
+++ b/src/app/main/pages/spares/replacements/replacements.component.html
@@ -3,12 +3,12 @@
         <mat-icon class="ms-toolbar__icon">published_with_changes</mat-icon>
         <h1 class="ms-toolbar__title" [ngClass]="isMobile ? 'ms-toolbar__title--mobile' : 'ms-toolbar__title--desktop'">
             Reemplazos</h1>
-        <button mat-stroked-button class="ms-toolbar__button" (click)="openDialog('create')"
+        <button mat-stroked-button class="ms-toolbar__button" (click)="openDialog('create')" *ngIf="authService.uiConfig.spareParts.replacements.toolbar.create"
             [ngClass]="isMobile ? 'ms-toolbar__button--mobile' : 'ms-toolbar__button--desktop'">
             <mat-icon>add</mat-icon>
             CREAR
         </button>
-        <button mat-stroked-button class="ms-toolbar__button" (click)="openDialog('create-bulk')"
+        <button mat-stroked-button class="ms-toolbar__button" (click)="openDialog('create-bulk')" *ngIf="authService.uiConfig.spareParts.replacements.toolbar.bulk"
             [ngClass]="isMobile ? 'ms-toolbar__button--mobile' : 'ms-toolbar__button--desktop'">
             <mat-icon>add</mat-icon>
             LOTE
@@ -78,11 +78,11 @@
                 <td mat-cell *matCellDef="let element; let i = index">
                     <ng-container>
                         <mat-menu #rawMenu="matMenu">
-                            <button class="w3-small" mat-menu-item (click)="openDialog('edit', element, i)">
+                            <button class="w3-small" mat-menu-item (click)="openDialog('edit', element, i)" *ngIf="authService.uiConfig.spareParts.replacements.actions.edit">
                                 <mat-icon>edit</mat-icon>
                                 Editar
                             </button>
-                            <button class="w3-small" mat-menu-item (click)="openDialog('delete',element,i)">
+                            <button class="w3-small" mat-menu-item (click)="openDialog('delete',element,i)" *ngIf="authService.uiConfig.spareParts.replacements.toolbar.delete">
                                 <mat-icon>delete</mat-icon>
                                 Borrar
                             </button>
