--- a/src/app/main/pages/spares/spare-parts/spare-parts.component.html
+++ b/src/app/main/pages/spares/spare-parts/spare-parts.component.html
@@ -6,6 +6,7 @@
         <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".csv"
             id="fileInput2">
         <button type="file" mat-stroked-button class="ms-toolbar__button" accept=".csv" (click)="fileInput2.click()"
+            *ngIf="authService.uiConfig.spareParts.sparesCheck.toolbar.attachSis"
             [ngClass]="isMobile ? 'ms-toolbar__button--mobile' : 'ms-toolbar__button--desktop'">
             <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
             ADJUNTAR SIS
@@ -88,7 +89,8 @@
             </div>
         </ng-template>
         <div class="footer">
-            <button mat-stroked-button class="ms-button" (click)="downloadXls()" [disabled]="dataSparePart.length < 1">
+            <button mat-stroked-button class="ms-button" (click)="downloadXls()" [disabled]="dataSparePart.length < 1"
+                *ngIf="authService.uiConfig.spareParts.sparesCheck.actions.download">
                 DESCARGAR
             </button>
         </div>
